# hello-simon

./: .eslintrc.js  .gitignore  .prettierrc  README.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  rsbuild.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: HelloSimon.vue
